# Korin

./: .gitignore  CMakeLists.txt  CMakeOptions.txt  LICENSE.md  bolt.bolt
cmake/: PackConfigurations.cmake
src/: kstring.cpp  kstring.h  main.c  main.cpp  view.h
